--- a/public/markdown/project/0.md
+++ b/public/markdown/project/0.md
@@ -1,7 +1,5 @@
-- Oh my, oh my God 예상했어 나
-  - I was really hoping that `he will come through`
-- Oh my, oh my God 단 너뿐이야
-  - Asking all the time about `what I should do`
-- No, I can never `let him go` 너만 생각나 `twenty-four` 난 행운아야 정말로 `I know, I know`
-- 널 알기 전까지는 나 `의미 없었어` 전부 다 **내 맘이 끝이 없는 걸** `I know, I know`
-- **I'm going crazy, right?**
+- 반다이남코의 게임 빌링 시스템 운영.
+- front가 없는 형태로 api 서비스 제공.
+- 콘솔게임 플랫폼으로부터 결제 요청을 API로 전달받아 빌링 처리하는 구조.
+- 유저로부터 요청이 인입되는 경로가 API 밖에 없기 때문에 해당 업체의 운영을 하면서 백엔드 개발에 대해 많이 이해할 수 있었습니다.
+- 반다이남코 측에서 QA를 굉장히 많이 진행하기에, 사내에서도 단위테스트를 많이 진행하였습니다. 기능 추가/변경 작업을 할때마다 결제/구매의 여러 케이스로 테스트를 진행하며 테스트의 중요도를 알게 되었습니다.
