--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -1,8 +1,10 @@
-#### Foo team
-  - 디자인 시스템 유지보수
-    - foo Component 구현
+#### 서비스개발 1팀
+  - 빌링 시스템 운영/개선
+  - 이후 사내 조직 개편으로 팀 이동
 
-#### Bar Team
-  - Chrome Extension 개발
-    - **엄선된 원두**를 커피 전문기업의 기술로 로스팅한 **깊고 풍부한 맛**의 커피
-    - **라떼 크림**을 더하여 입안 가득 채우는 우유의 풍미와 부드러운 달콤함
+#### 기술연구소
+  - 빌링 시스템 개발
+  - 운영팀 인력 부족으로 팀 이동
+
+#### 플랫폼기술5팀
+  - 빌링 시스템 운영/개선
