포트폴리오 업데이트

--- a/public/markdown/project/1.md
+++ b/public/markdown/project/1.md
@@ -1,7 +1,4 @@
-- **‘Cause I know what you like boy**
-- **You're my chemical `hype boy`**
-- 내 지난날들은 눈 뜨면 잊는 꿈
-  - `Hype boy` 너만 원해 `Hype boy` 내가 전해
-- And we can go high **말해봐** yeah **느껴봐** mm mm
-- Take him to the sky
-- You know I `hype you boy`
+- 페이레터 입사 이후 가장 오랫동안 맡은 업체로써, 그만큼 책임감이 가장 컸습니다.
+- `결제페이지`와 `API` 제공
+- 빌링시스템의 안정성 확인, 업체측 요청으로 PG 연동이나 결제 시스템 변경 등의 작업
+- 개발이 아닌 운영업무이기 때문에 반복적인 업무는 대부분 자동화를 해놓고, 장애가 발생하지 않도록 신경쓰게 되었습니다.
