--- a/public/markdown/project/2.md
+++ b/public/markdown/project/2.md
@@ -1,7 +1,7 @@
-- Oh my, oh my God 예상했어 나
-  - I was really hoping that `he will come through`
-- Oh my, oh my God 단 너뿐이야
-  - Asking all the time about `what I should do`
-- No, I can never `let him go` 너만 생각나 `twenty-four` 난 행운아야 정말로 `I know, I know`
-- 널 알기 전까지는 나 `의미 없었어` 전부 다 **내 맘이 끝이 없는 걸** `I know, I know`
-- **I'm going crazy, right?**
+- Netgame 측의 빌링시스템을 `C#`으로 운영 중이었으나, 업체측 요청으로 인해 `Java`로 전환하기 위한 프로젝트
+- 기존에 `C#`으로 운영중이던 시스템을 파악하고, 불필요한 내용은 제거하고, 개선하여 `Java`로 구현하는 방식으로 진행
+- `결제 페이지`와 `API` 제공
+  - 결제페이지에서의 PG연동, 백오피스의 페이지 일부를 담당하였습니다.
+- `Vue.js`를 처음 접하게 되어 걱정이 많았으나 함께 작업하는 PE들과 스터디를 하고, 서로 지식을 공유하며 시너지를 내어 잘 마무리 할 수 있었습니다.
+  - 함께하는 동료의 중요성을 크게 느낀 프로젝트였습니다.
+- `Java`로 컨버팅을 한 뒤에 계속해서 운영을 담당하였습니다.
