--- a/public/markdown/project/3.md
+++ b/public/markdown/project/3.md
@@ -1,7 +1,2 @@
-- **‘Cause I know what you like boy**
-- **You're my chemical `hype boy`**
-- 내 지난날들은 눈 뜨면 잊는 꿈
-  - `Hype boy` 너만 원해 `Hype boy` 내가 전해
-- And we can go high **말해봐** yeah **느껴봐** mm mm
-- Take him to the sky
-- You know I `hype you boy`
+- `결제 페이지`, `API` 제공
+- 규모가 크지않고, 복잡하지 않아 어렵지 않게 완료할 수 있었던 프로젝트였습니다만 오픈 후 얼마 지나지 않아 서비스를 종료하였습니다.
