--- a/public/markdown/project/7.md
+++ b/public/markdown/project/7.md
@@ -14,7 +14,7 @@
   - CI/CD 파이프라인 구축 및 배포 관리:
     - `CodePipeline`을 통해 Git 코드 변경사항을 감지하고, `CodeBuild`에서 이미지 생성을 수행하여 `ECS`에 무중단 배포(`Blue/Green`)와 롤링 업데이트를 적용
     - 어드민과 개발 서버는 롤링 업데이트 방식으로 운영, 프로덕션 서비스는 Blue/Green 방식을 사용해 서비스 가용성을 유지
-  - 모니터링 및 로깅 개선 (CloudWatch): CloudWatch를 통해 애플리케이션 모니터링과 로깅을 강화, 서비스 상태 모니터링 및 문제 발생 시 실시간으로 알림을 받아 빠르게 대응
+  - 모니터링 및 로깅 개선 (`CloudWatch`): `CloudWatch`를 통해 애플리케이션 모니터링과 로깅을 강화, 서비스 상태 모니터링 및 문제 발생 시 실시간으로 알림을 받아 빠르게 대응
 
 - 백엔드 기능 개선 및 리팩토링
   - `Lambda` to `Spring Boot` 이관: `Google Cloud Function`을 `AWS Lambda`로 이관 후, `ISMS` 요구사항에 맞춰 다시 전체 `Lambda` 기능을 `Spring Boot` 기반으로 재설계 및 이관
@@ -36,5 +36,4 @@
   - 로깅 정책 개편 및 `SQS` 연동: 로깅 정책을 정의하고, 기존 파일 로그 외에 DB와 클라우드 로그를 추가해 다양한 로그 포맷 관리, `SQS`와의 연동으로 로깅을 더욱 효율적으로 관리하고, 카카오톡 채널 및 슬랙 알림을 통한 실시간 대응 체계 구축
 
 - 정기적인 데이터 분석 및 통계 자료 추출
-  - 월간 통계 자료 자동 추출 기능: 매달 1회 이상 공고를 등록한 사용자 UID, 알바 배정을 받은 UID, 공고에 지원한 UID, 배정된 알바 UID 등을 추출하여 통계 자료로 제공, 월간 운영 리포트와 경영진 보고에 기여
- 
+  - 월간 통계 자료 자동 추출 기능
