--- a/public/markdown/project/7.md
+++ b/public/markdown/project/7.md
@@ -1,12 +1,12 @@
 - GCP to AWS 이관 및 아키텍처 개선
   - `AWS` 인프라로 전환
-    - 기존 `GCP` 서버리스 앱을 `AWS` 기반으로 이관하여 AWS 서비스를 충분히 활용하여 구성하였습니다. 
-    - `AWS API GateWay`, `ALB` 등을 통해 트래픽 처리 효율성을 높이고 `ECR`, `ECS`, `CodePipeline` CI/CD 구성을 통해 애플리케이션의 안정성 및 확장성을 강화하였습니다
+    - 기존 `GCP` 서버리스 앱을 `AWS` 기반으로 이관하여 AWS 서비스를 충분히 활용하여 구성
+    - `AWS API GateWay`, `ALB` 등을 통해 트래픽 처리 효율성을 높이고 `ECR`, `ECS`, `CodePipeline` CI/CD 구성을 통해 애플리케이션의 안정성 및 확장성을 강화
   - 데이터베이스 마이그레이션 (`Google Firebase` to `AWS DocumentDB`):
-    - 일 단위 배치 스케줄러를 개발하여 마이그레이션을 단계적으로 수행하였습니다.
-    - 데이터 타입이 명확치 않아, 기존 데이터를 담는 필드를 생성하여 일정 기간 유지하며 데이터 보존성을 높였습니다.
-    - API를 통해 특정 유저의 관련 데이터를 별도로 이관하는 기능 추가하여 누락된 데이터에 대한 방지책을 마련하였습니다.
-    - 필요 시 개발한 기능을 유용하게 활용한 후, 불필요한 필드와 기능을 모두 제거하여 추후 관리의 편의를 높였습니다.
+    - 일 단위 배치 스케줄러를 개발하여 마이그레이션을 단계적으로 수행
+    - 데이터 타입이 명확치 않아, 기존 데이터를 담는 필드를 생성하여 일정 기간 유지하며 데이터 보존성을 확보
+    - API를 통해 특정 유저의 관련 데이터를 별도로 이관하는 기능 추가하여 누락된 데이터에 대한 방지책을 마련
+    - 필요 시 개발한 기능을 유용하게 활용한 후, 불필요한 필드와 기능을 모두 제거하여 추후 관리의 편의성을 갖춤
 
 - `AWS` 기반 백엔드 서비스 구축 및 운영
   - `AWS` 주요 서비스 활용 및 설정:
@@ -26,7 +26,7 @@
 - 백엔드 기능 개선 및 리팩토링
   - `Lambda` to `Spring Boot` 이관: `Google Cloud Function`을 `AWS Lambda`로 이관 후, `ISMS` 요구사항에 맞춰 다시 전체 `Lambda` 기능을 `Spring Boot` 기반으로 재설계 및 이관
     - 대부분의 기능을 이관하면서 ISMS 통과 하였습니다
-    - 여러 담당자가 거쳐오며 쌓인 불필요한 코드와 미사용 로직을 정리하고 필요 없는 기능을 삭제하여 코드의 유지보수성을 높였습니다.
+    - 여러 담당자가 거쳐오며 쌓인 불필요한 코드와 미사용 로직을 정리하고 필요 없는 기능을 삭제하여 코드의 유지보수성을 향상 시킴
 
 - 보안 및 데이터 관리 최적화
   - `ISMS` 대응 및 개인정보 암호화
