--- a/public/markdown/project/7.md
+++ b/public/markdown/project/7.md
@@ -2,19 +2,19 @@
   - `AWS` 인프라로 전환
     - 기존 `GCP` 서버리스 앱을 `AWS` 기반으로 이관하여 AWS 서비스를 충분히 활용하여 구성
     - `AWS API GateWay`, `ALB` 등을 통해 트래픽 처리 효율성을 높이고 `ECR`, `ECS`, `CodePipeline` CI/CD 구성을 통해 애플리케이션의 안정성 및 확장성을 강화
-  - 데이터베이스 마이그레이션 (`Google Firebase` to `AWS DocumentDB`):
+  - 데이터베이스 마이그레이션 (`Google Firebase` to `AWS DocumentDB`)
     - 일 단위 배치 스케줄러를 개발하여 마이그레이션을 단계적으로 수행
     - 데이터 타입이 명확치 않아, 기존 데이터를 담는 필드를 생성하여 일정 기간 유지하며 데이터 보존성을 확보
     - API를 통해 특정 유저의 관련 데이터를 별도로 이관하는 기능 추가하여 누락된 데이터에 대한 방지책을 마련
     - 필요 시 개발한 기능을 유용하게 활용한 후, 불필요한 필드와 기능을 모두 제거하여 추후 관리의 편의성을 갖춤
 
 - `AWS` 기반 백엔드 서비스 구축 및 운영
-  - `AWS` 주요 서비스 활용 및 설정:
+  - `AWS` 주요 서비스 활용 및 설정
     - `Cognito`를 회원 정보 저장 및 인증 수단으로 도입해 보안성을 강화하고 사용자의 로그인 및 회원가입 기능을 안정화
     - `API Gateway`에서 사용자 인증 및 API 호출 구분을 통한 효율적인 API 관리를 도입
     - `ECR`로 도커 이미지 파일 저장 및 관리, `ECS`를 통해 애플리케이션을 안정적으로 구동, `EC2`를 제거하여 관리포인트 축소
     - `S3`를 사용해 서비스 내 필요한 파일을 저장하여 접근성 향상
-  - CI/CD 파이프라인 구축 및 배포 관리:
+  - CI/CD 파이프라인 구축 및 배포 관리
     - `CodePipeline`을 통해 Git 코드 변경사항을 감지하고, `CodeBuild`에서 이미지 생성을 수행하여 `ECS`에 무중단 배포(`Blue/Green`) 혹은 롤링 업데이트를 적용
     - 개발 서버는 롤링 업데이트 방식으로 운영, 프로덕션 서비스는 Blue/Green 방식을 사용해 서비스 가용성을 유지
   - 모니터링 및 로깅 개선 (`CloudWatch`): `CloudWatch`를 통해 애플리케이션 모니터링과 로깅을 강화, 서비스 상태 모니터링 및 문제 발생 시 실시간으로 알림을 받아 빠르게 대응
@@ -36,7 +36,7 @@
     - 중요 정보의 마스킹 처리로 데이터 보안성을 높임
 
 - 외부 시스템 연동 및 검증 기능 추가
-  - 외부 연동 기능 구축:
+  - 외부 연동 기능 구축
     - Nice: 실명 인증 기능 추가
     - 다날: 휴대폰 본인 인증 기능 추가
     - 링크허브(팝빌): SMS 발송 및 예금주 조회 기능 추가
